--- a/Projeto/Projeto.csproj
+++ b/Projeto/Projeto.csproj
@@ -65,6 +65,12 @@
     <Compile Include="FormPrincipal.Designer.cs">
       <DependentUpon>FormPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormRegistrarBaixa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRegistrarBaixa.Designer.cs">
+      <DependentUpon>FormRegistrarBaixa.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registro.cs" />
@@ -76,6 +82,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPrincipal.resx">
       <DependentUpon>FormPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormRegistrarBaixa.resx">
+      <DependentUpon>FormRegistrarBaixa.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
